@@ -27,6 +27,6 @@ public class InputRequireThisFor {
         for (String name : new String[]{}) {
         }
 
-        Path jarfile = Paths.get(name + ".jar"); // violation '.*variable 'name' needs .*'
+        Path jarfile = Path.of(name + ".jar"); // violation '.*variable 'name' needs .*'
     }
 }
